# MLLQCD-Surrogate_Variables

./: main.py  pyproject.toml
configs/: transformer.yaml
data/ml_processed/: bias_correction_data.npy  evaluation_data.npy  metadata.pkl  normalization_params.pkl
results/truth_analysis/: truth_analysis_report.txt
src/analysis/: truth_analysis.py
src/dataloader/: transformer_dataloader.py
src/dataset/: basedataset.py  transformer_dataset.py
src/model_scripts/: base_model.py
src/model_scripts/transformer/: transformer_model.py
src/model_scripts/transformer/transformer_components/: EncoderLayer.py  FeedForwardSublayer.py  InputEmbedding.py  MultiHeadAttention.py  PositionalEncoding.py  RegressionHead.py
src/preprocessing/: convert_data.py  preprocessor.py  sanity_check.py
